kubernetes/apps/monitoring/victoria-metrics/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames:
    - "grafana.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: victoria-metrics-k8s-stack-grafana
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
